kubernetes/rabbitmq/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rabbitmq-management-ingress
  namespace: rabbitmq
spec:
  rules:
  - host: new-rabbitmq.clickyab.ae
    http:
      paths:
      - path: /
        backend:
          serviceName: rabbitmq-management
          servicePort: 15672
